Fixing font size on iPhone 12 to 14

--- a/styles/navMenu.css
+++ b/styles/navMenu.css
@@ -146,7 +146,9 @@
 /* iPhone 12 */
 @media (min-width: 376px) and (max-width: 414px) and (min-height: 668px) and (max-height: 895px){
     .navMenu{
-        font-size: .7em !important;
+        font-size: 1.1em;
+        -webkit-font-size: 1.1em;
+        -moz-font-size: 1.1em;
     }
     .toggleButton{
         height: 18px;
